--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "test"
   },
   "scripts": {
+    "typecheck": "tsc -p jsconfig.json",
+    "lint": "biome lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +20,9 @@
   "bugs": {
     "url": "https://github.com/jakelazaroff/roving-tabindex/issues"
   },
-  "homepage": "https://github.com/jakelazaroff/roving-tabindex#readme"
+  "homepage": "https://github.com/jakelazaroff/roving-tabindex#readme",
+  "devDependencies": {
+    "biome": "^0.3.3",
+    "typescript": "^5.8.3"
+  }
 }
